index.css
/*
 * Copyright 2020 The Matrix.org Foundation C.I.C.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *         http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

/* #editDialog {
  position: fixed;
  width: calc(100% - 60px);
  height: calc(100% - 80px);
  margin: 20px;
  border-color: #0cbd8b;
  border-style: solid;
  border-width: 5px;
  border-radius: 5px;
  top: 40px;
  left: 0;
} */
#editDialog {
  position: fixed;
  width: calc(100%);
  height: calc(60%);
  border-color: #000;
  border-style: solid;
  border-radius: 0;
  bottom: 0;
  left: 0;

  border-width: 0;
  border-top-width: 0px;
  border-top-width: 2px;
  border-style: dashed;
}
#editButton {
  position: fixed;
  top: 20px;
  right: 20px;
  opacity: 0.1;
}
#editButton:hover {
  position: fixed;
  top: 20px;
  right: 20px;
  opacity: 1;
  transition: 0.2s;
}
#editDialog button {
  position: absolute;
  bottom: 10px;
  right: 10px;
}
#editDialog textarea {
  flex-grow: 1;
  background-color: #d7d7d7eb;
  border: none;
  resize: none;
}
/* simple css for markdwon*/
html,
body {
  background-color: #ffffff;
  color: #000000;
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
}

body {
  padding: 20px;
}

button {
  border: none;
  color: #ffffff;
  background-color: #0cbd8b;
  border-radius: 4px;
  padding: 6px 12px;
  cursor: pointer;
}
h1 {
  text-align: center;
  color: #0cbd8b;
}

td,
th {
  border-bottom: 1px solid black;
}

